# SilentPulse

./: .gitignore  .gitmodules  AUDIT_LOG.md  OFFLINE_VOICE_ASSISTANT_SPEC.md  README.md  build.gradle  com.moez.QKSMS.feature.drivemode.DriveModeService.kt  fix_build_errors.py  fix_chunked_and_retry.py  fix_listener_logging.py  fix_listener_logging2.py  fix_logging.py  fix_nullable_views.py  fix_reading_flow.py  fix_routeCommand.py  fix_routeCommand2.py  fix_shadows.py  fix_stop_monitor.py  gradle.properties  migrate_synthetics.py
.github/: copilot-instructions.md
.github/workflows/: release.yml
TASKS/: LOCATION_SHARING_DESIGN.md  NEXT.MD  VOICE_TEST_SCRIPT.md
android-smsmms/: build.gradle
android-smsmms/src/main/: AndroidManifest.xml
com/moez/QKSMS/feature/drivemode/: PiperTtsEngine.kt  SilentPulseNotificationListener.kt  TtsEngine.kt  TtsEngineFactory.kt
common/: build.gradle
data/: build.gradle
domain/: build.gradle
presentation/: build.gradle  proguard-rules.pro
presentation/src/debug/: AndroidManifest.xml
presentation/src/main/: AndroidManifest.xml
presentation/src/main/assets/model-en-us/: uuid
presentation/src/main/cpp/whisper/: CMakeLists.txt  jni.c
presentation/src/main/res/drawable/: ic_assistant_black_24dp.xml  ic_mic_black_24dp.xml  ic_mic_off_black_24dp.xml  ic_notifications_off_black_24dp.xml  ic_remove_black_24dp.xml  ic_skip_next_black_24dp.xml  sp_launcher_foreground.xml
presentation/src/main/res/layout/: about_controller.xml  assistant_controller.xml  attachment_contact_list_item.xml  avatar_view.xml  backup_controller.xml  backup_list_dialog.xml  backup_list_item.xml  blocked_list_item.xml  blocked_messages_controller.xml  blocked_number_list_item.xml  blocked_numbers_add_dialog.xml  blocked_numbers_controller.xml  blocking_controller.xml  blocking_manager_controller.xml  blocking_manager_preference_view.xml  changelog_dialog.xml  changelog_list_item.xml  chip_input_list_item.xml  compose_activity.xml  contact_chip.xml  contact_chip_detailed.xml  contact_list_item.xml  contact_number_list_item.xml  contacts_activity.xml  container_activity.xml  conversation_info_settings.xml  conversation_list_item.xml  (+39 more)
scripts/: push-and-watch.sh
scripts/aider/: UNATTENDED_LEARNINGS.md  aider_safe.sh  fix_build_now.sh  phase_1.sh  phase_2.sh  phase_3.sh  phase_4.sh  phase_5.sh  phase_6.sh  phase_7.sh  phase_8.sh  run_all_phases.sh
scripts/aider/logs/done/: phase_1.done  phase_2.done  phase_3.done  phase_4.done  phase_5.done  phase_6.done  phase_7.done  phase_8.done
(+586 files in other folders)
